[package]
name = "Oracle_Program"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.6.7"
thiserror = "1.0.24"
arrayref = "0.3.6"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
pyth-client = "0.2.2"
bytemuck = "1.7.2"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.5.0"
solana-sdk = "1.6.7"
solana-validator = "1.6.7"
solana-client = "1.6.7"

[lib]
crate-type = ["cdylib", "lib"]
